fix home pull-down alignment, fix pull-down event handlers

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,7 @@ nav ul .project-pulldown li {
 }
 
 nav ul.project-pulldown {
-  right: 250px;
+  right: 263px;
   text-align: right;
   padding: 0;
 }
